--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "botbuilder": "^3.5.4",
+    "cognitive-services": "^0.1.0",
     "restify": "^4.3.0"
   }
 }
