--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "botbuilder": "^3.5.4",
     "botbuilder-cognitiveservices": "^1.0.1",
     "cognitive-services": "^0.1.0",
-    "restify": "^4.3.0"
+    "restify": "^4.3.0",
+    "serve-static-restify": "^1.0.0"
   }
 }
